# generic-restapi

./: README.md  base_database.py  config.py  data_source.py  database.py  endpoint.py  engine.py  exception.py  main.py  model.py  mongo_db.py  postgres_db.py  pyproject.toml  schema.py
data_source/: __init__.py  data_source.py  engine.py  mongo_db.py  postgres_db.py
databases/: __init__.py  base_database.py  database_connections.py  database_router.py  postgres_db.py
